# petalinux-rtos-yocto

./: .gitignore  .gitmodules  README.md
UBUNTU-24.10/: dockerfile
apps/gpio_app/: Makefile
apps/hello_arm/: main.c
apps/kernel_vdma_module/: Makefile  vdma_overlay_driver.c
apps/qt_app/Led_controller/: CMakeLists.txt  gpio.h  mainwindow.cpp  mainwindow.h
apps/user_vdma_app/: Makefile  main.c
apps/user_vdma_app/include/: graphics.h  utils.h  vdma.h
apps/user_vdma_app/src/: graphics.c  main.c  test.c  utils.c  vdma.c
apps/vdma_test/: vdma_query.py
copy_hw_description/: system.xsa
hardware/: build_platform_hdmi_vdma_v1_0.tcl
knowledge/: ARTICLES.md  GUIDE_PYNQZ2_SDL2.md
knowledge/gpio/: Tutorial_Gpio_Control_Embedded_Linux_v2.docx
knowledge/info_sources/: GUIDE_PYNQZ2_SDL2.md
knowledge/vdma/: vdma_info.docx
petalinux-base-pynqZ2/PYNQ_SDL/: design_2_wrapper.bit
petalinux-base-pynqZ2/PYNQ_SDL/.petalinux/: metadata
petalinux-base-pynqZ2/PYNQ_SDL/project-spec/configs/: .statistics  config  gen-machineconf.log.old  plnx_syshw_data  rootfs_config
petalinux-base-pynqZ2/PYNQ_SDL/project-spec/configs/configs/: Kconfig  Kconfig.main  Kconfig.yoctobuildsettings
petalinux-yocto/: README.md
petalinux-yocto/apps/gpio_app/: main.c
petalinux-yocto/apps/hello_arm/: Makefile
petalinux-yocto/apps/hello_sdl2/: Makefile
petalinux-yocto/apps/hello_sdl2/src/: main.c
petalinux-yocto/apps/kernel_hello_world/: Makefile
petalinux-yocto/apps/kernel_vdma_module/: Makefile  vdma_overlay.h  vdma_overlay_driver.c
petalinux-yocto/apps/qt_app/: color_coding_gui.xml
petalinux-yocto/apps/qt_app/Led_controller/: CMakeLists.txt  gpio.cpp  mainwindow.ui
petalinux-yocto/apps/user_vdma_app/src/: graphics.c  graphics_debug.c  utils.c  vdma.c  vdma_debug.c
petalinux-yocto/docs/vdma/: .~lock.tutorial_pynqz2_embedded_graphics.odt#  tutorial_pynqz2_embedded_graphics.odt
petalinux-yocto/docs/vdma/info_dump/: ARTICLES.md
petalinux-yocto/knowledge/: README.md
petalinux-yocto/knowledge/vdma/: Tutorial_Video_Embedded_Linux.docx  info.md  tutorial_pynqz2_embedded_graphics.odt  vdma_info.docx
rtos/: README.md
rtos/apps/EOS/: Makefile
rtos/knowledge/: README.md
(+97 files in other folders)
